@@ -22,7 +22,6 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
 import java.net.InetSocketAddress;
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -47,7 +46,7 @@ public class ClusterAddressProviderTest {
     }
 
     private Address createMultipleAddress() {
-        List<String> hostAddresses = Arrays.asList("127.0.0.0", "127.0.0.1", "0.0.0.0");
+        List<String> hostAddresses = List.of("127.0.0.0", "127.0.0.1", "0.0.0.0");
         return new MultipleAddress(hostAddresses, 9994);
     }
 
