@@ -1,11 +1,10 @@
 package com.navercorp.pinpoint.web.util;
 
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
+
+import static org.assertj.core.api.Assertions.assertThat;
 
 
 public class ListListUtilsTest {
@@ -13,13 +12,12 @@ public class ListListUtilsTest {
     @Test
     public void toList() {
 
-        List<String> a = Arrays.asList("a", "1");
-        List<String> b = Arrays.asList("b", "2");
-        List<List<String>> listList = new ArrayList<>();
-        listList.add(a);
-        listList.add(b);
+        List<String> a = List.of("a", "1");
+        List<String> b = List.of("b", "2");
+
+        List<List<String>> listList = List.of(a, b);
 
         List<String> sum = ListListUtils.toList(listList);
-        Assertions.assertEquals(4, sum.size());
+        assertThat(sum).hasSize(4);
     }
 }
